# tamayo

./: .gitignore  CHANGELOG.md  NOTICE  PLAN.md  README.md  SOURCES.md  go.mod  go.sum
docs/: implementation-inventory.md  index.html  known-gaps.md  pq-email-profile.md  token-roadmap.md
emailtoken/: base64.go  doc.go  emailtoken_test.go  evt.go  jwk.go  jws.go  policy_email.go  pq_email.go  pq_email_test.go  presentation.go
faest/: bavc.go  bavc_test.go  bench_test.go  commit.go  commit_test.go  doc.go  example_test.go  faest_commits.go  faest_fs.go  faest_prove.go  faest_prove_commits.go  faest_sign.go  faest_sign_test.go  faest_verify.go  hash.go  hash_test.go  leaf_commit.go  leaf_commit_test.go  leaf_hash.go  leaf_hash_test.go  nist_kat_test.go  params.go  params_test.go  prg.go  prg_test.go  quicksilver2.go  quicksilver2_test.go  rijndael.go  rijndael_test.go  vole.go  vole_hash.go  vole_hash_test.go  vole_mayo_bavc.go  vole_mayo_bavc_test.go  vole_mayo_blind_test.go  vole_mayo_check.go  vole_mayo_circuit.go  vole_mayo_circuit_test.go  vole_mayo_diag_test.go  vole_mayo_open_test.go  (+12 more)
field/: aes_consts.go  big.go  big_test.go  embed.go  embed_test.go  field.go  field_test.go  gf64.go  gf64_test.go  gf8.go  largefieldmul_test.go  mayo_embed.go
gf16/: echelon.go  echelon_test.go  gf16.go  gf16_test.go  mat.go  mat_test.go  packed.go  packed_test.go  table.go  table_test.go
logging/: console.go  logging.go  logging_test.go
tools/faest_kat_gen/: Cargo.toml
tools/faest_kat_gen/src/: main.rs
tools/kt_dump/: Cargo.toml
tools/kt_dump/src/: lib.rs  main.rs
(+190 files in other folders)
