[package]
name = "kt_dump"
version = "0.1.0"
edition = "2021"

[dependencies]
eat-pass-core = { path = "/Users/mac/tee-stack/eat-pass/core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
thiserror = "2"
faest = "=0.3.0"
